--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,8 @@
 <body>
 
 <div class="navbar">🔐 Login</div>
-<a href="/" class="btn">⬅️ Back to Home</a>
+
+<a href="/" class="btn">⬅ Back to Home</a>
 
 <div class="container">
     <h2>Welcome Back</h2>
